Refactor: Add fetching views and requests data in EventEnrichmentService