@@ -7,70 +7,87 @@ import ru.practicum.ewm.event.mapper.EventMapper;
 import ru.practicum.ewm.event.model.Event;
 import ru.practicum.ewm.exception.NotFoundException;
 import ru.practicum.ewm.request.client.RequestClient;
+import ru.practicum.ewm.stats.StatsClient;
 import ru.practicum.ewm.stats.ViewStatsDto;
 import ru.practicum.ewm.user.client.UserClient;
 import ru.practicum.ewm.user.dto.UserShortDto;
 
+import java.time.LocalDateTime;
+import java.time.Month;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class EventEnrichmentService {
+    private static final LocalDateTime VIEWS_FROM = LocalDateTime.of(1970, Month.JANUARY, 1, 0, 0, 0);
+    private static final LocalDateTime VIEWS_TO = LocalDateTime.of(2100, Month.DECEMBER, 31, 23, 59, 59);
+
     private final EventService eventService;
     private final EventMapper eventMapper;
     private final UserClient userClient;
     private final RequestClient requestClient;
+    private final StatsClient statsClient;
 
     public EventFullDto add(long userId, NewEventDto newEventDto) {
         checkUserExists(userId);
         Event event = eventMapper.mapToEvent(userId, newEventDto);
         Event savedEvent = eventService.add(event);
-        UserShortDto initiator = findUser(savedEvent);
-        return eventMapper.mapToFullDto(savedEvent, initiator);
+        fetchUser(savedEvent);
+        return eventMapper.mapToFullDto(savedEvent);
     }
 
     public EventFullDto getPublishedById(long eventId) {
         Event event = eventService.getPublishedById(eventId);
-        UserShortDto initiator = findUser(event);
-        return eventMapper.mapToFullDto(event, initiator);
+        fetchUser(event);
+        fetchConfirmedRequests(event);
+        fetchViews(event);
+        return eventMapper.mapToFullDto(event);
     }
 
     public EventFullDto getByIdAndUserId(long id, long userId) {
         Event event = eventService.getByIdAndUserId(id, userId);
-        UserShortDto initiator = findUser(event);
-        return eventMapper.mapToFullDto(event, initiator);
+        fetchUser(event);
+        fetchConfirmedRequests(event);
+        fetchViews(event);
+        return eventMapper.mapToFullDto(event);
     }
 
     public List<EventFullDto> getFullEvents(EventFilter filter) {
         List<Event> events = eventService.get(filter);
-        Map<Long, Long> confirmedRequestStats = getConfirmedRequests(events);
-        events.forEach(event -> event
-                .setConfirmedRequests(confirmedRequestStats.getOrDefault(event.getId(), 0L)));
-        List<UserShortDto> initiators = findUsers(events);
-        return eventMapper.mapToFullDto(events, initiators);
+        fetchUsers(events);
+        fetchConfirmedRequests(events);
+        fetchViews(events);
+        return eventMapper.mapToFullDto(events);
     }
 
     public List<EventShortDto> getShortEvents(EventFilter filter) {
         List<Event> events = eventService.get(filter);
-        List<UserShortDto> initiators = findUsers(events);
-        return eventMapper.mapToShortDto(events, initiators);
+        fetchUsers(events);
+        fetchConfirmedRequests(events);
+        fetchViews(events);
+        return eventMapper.mapToShortDto(events);
     }
 
     public EventFullDto update(long id, UpdateEventAdminRequest updateEventAdminRequest) {
         EventPatch patch = eventMapper.mapToPatch(updateEventAdminRequest);
         Event event = eventService.update(id, patch);
-        UserShortDto initiator = findUser(event);
-        return eventMapper.mapToFullDto(event, initiator);
+        fetchUser(event);
+        fetchConfirmedRequests(event);
+        fetchViews(event);
+        return eventMapper.mapToFullDto(event);
     }
 
     public EventFullDto update(long eventId, UpdateEventUserRequest updateEventUserRequest, long userId) {
         final EventPatch patch = eventMapper.mapToPatch(updateEventUserRequest);
         Event event = eventService.update(eventId, patch, userId);
-        UserShortDto initiator = findUser(event);
-        return eventMapper.mapToFullDto(event, initiator);
+        fetchUser(event);
+        fetchConfirmedRequests(event);
+        fetchViews(event);
+        return eventMapper.mapToFullDto(event);
     }
 
     public boolean existsByIdAndUserId(long userId, long eventId) {
@@ -83,30 +100,39 @@ public class EventEnrichmentService {
         }
     }
 
-    private UserShortDto findUser(Event event) {
-        return findUsers(Collections.singletonList(event)).getFirst();
-    }
-
-    private List<UserShortDto> findUsers(List<Event> events) {
+    private void fetchUsers(List<Event> events) {
         List<Long> userIds = events.stream().map(Event::getInitiatorId).toList();
-        return userClient.findAllByIdIn(userIds);
+        List<UserShortDto> initiators = userClient.findAllByIdIn(userIds);
+        Map<Long, UserShortDto> initiatorsMap = initiators.stream()
+                .collect(Collectors.toMap(UserShortDto::id, Function.identity()));
+        events.forEach(event -> event.setInitiator(initiatorsMap.get(event.getId())));
     }
 
-    private Map<Long, Long> getConfirmedRequests(List<Event> events) {
+    private void fetchUser(Event event) {
+        fetchUsers(Collections.singletonList(event));
+    }
+
+    private void fetchConfirmedRequests(List<Event> events) {
         List<Long> ids = events.stream().map(Event::getId).toList();
-        return requestClient.getRequestStats(ids);
+        Map<Long, Long> confirmedRequests = requestClient.getRequestStats(ids);
+        events.forEach(event -> event
+                .setConfirmedRequests(confirmedRequests.getOrDefault(event.getId(), 0L)));
     }
 
-    private Long getConfirmedRequests(final Event event) {
-        getConfirmedRequests(List.of(event));
-        return event;
+    private void fetchConfirmedRequests(Event event) {
+        fetchConfirmedRequests(Collections.singletonList(event));
     }
 
-    private Map<Long, Long> getHits(final List<Event> events) {
+    private void fetchViews(List<Event> events) {
         List<Long> ids = events.stream().map(Event::getId).toList();
         List<String> uris = ids.stream().map(id -> "/events/" + id).toList();
-        final Map<String, Long> views = statsClient.getStats(VIEWS_FROM, VIEWS_TO, uris, true).stream()
+        Map<String, Long> views = statsClient.getStats(VIEWS_FROM, VIEWS_TO, uris, true).stream()
                 .collect(Collectors.toMap(ViewStatsDto::uri, ViewStatsDto::hits));
-        events.forEach(event -> event.setViews(views.getOrDefault("/events/" + event.getId(), 0L)));
+        events.forEach(event -> event.
+                setViews(views.getOrDefault("/events/" + event.getId(), 0L)));
+    }
+
+    private void fetchViews(Event event) {
+        fetchViews(Collections.singletonList(event));
     }
 }
